# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
gen_diff/: __init__.py  engine.py  generate.py  generate_d.py  parser.py
gen_diff/formatter/: f_json.py  f_stylish.py  plain.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  diff_generator.py  file_loader.py  file_parser.py  formatter.py  generate_diff.py  parser.py  parsing_args.py  parsing_file.py  render.py
gendiff/formatter/: json.py  plain.py  rendering.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
hexlet-code/scripts/: gendiff.py
tests/: test_gdiff.py
tests/fixtures/: file5.yaml  file6.yaml  temp.txt  temp_yaml.txt
