[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vlad moryakov <sat1sfy@vk.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
